--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NearShoe_Java">
-        <activity android:name=".StaffDashboard"
-            android:label="Staff Dashboard"/>
-        <activity android:name=".pickup2" />
-        <activity android:name=".AddAdmin" />
-        <activity android:name=".AboutUs"></activity>
+        <activity
+            android:name=".StaffDashboard"
+            android:label="Staff Dashboard" />
+        <activity
+            android:name=".pickup2"
+            android:label="Pick up And Delivery" />
+        <activity
+            android:name=".AddAdmin"
+            android:label="Add Admin" />
+        <activity
+            android:name=".AboutUs"
+            android:label="About Us" />
 
         <activity
             android:name=".CustomerViewCart"
