--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,8 @@ dependencies {
     //SiliCompressor
     implementation 'com.iceteck.silicompressorr:silicompressor:2.2.4'
 
+    //create pdf
+    implementation 'com.itextpdf:itextg:5.5.10'
+    implementation  'com.karumi:dexter:6.2.1'
 
 }
