--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NearShoe_Java">
+        <activity android:name=".TestHistory"></activity>
         <activity
             android:name=".StaffDashboard"
             android:label="Staff Dashboard" />
@@ -23,7 +25,6 @@
         <activity
             android:name=".AboutUs"
             android:label="About Us" />
-
         <activity
             android:name=".CustomerViewCart"
             android:label="Cart Items" />
@@ -77,15 +78,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
+            android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.nearshoe_java.fileprovider"
             android:exported="false"
-            android:grantUriPermissions="true"
-            android:name="androidx.core.content.FileProvider">
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_path"
-                />
+                android:resource="@xml/provider_path" />
         </provider>
     </application>
 
